--- a/serverSide/package.json
+++ b/serverSide/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "^2.1.1"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "concurrently": "^4.0.1",
+    "object-assign": "^4.1.1"
   }
 }
