--- a/serverSide/package.json
+++ b/serverSide/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
-    "object-assign": "^4.1.1"
+    "object-assign": "^4.1.1",
+    "scheduler": "^0.11.0"
   }
 }
