--- a/clientSide/package.json
+++ b/clientSide/package.json
@@ -8,7 +8,8 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-stylesheet": "^2.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
