--- a/serverSide/package.json
+++ b/serverSide/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
+    "css-loader": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
@@ -25,7 +26,9 @@
     "node-gyp": "^3.8.0",
     "nodemon": "^1.18.6",
     "pg": "^7.6.0",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "react-stylesheet": "^2.2.2",
+    "style-loader": "^0.23.1"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
