--- a/clientSide/package.json
+++ b/clientSide/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "^16.6.1",
+    "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.6.1",
+    "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "react-select": "^2.1.1",
     "react-stylesheet": "^2.2.2"
   },
   "scripts": {
@@ -28,6 +29,6 @@
   ],
   "devDependencies": {
     "object-assign": "^4.1.1",
-    "scheduler": "^0.11.0"
+    "scheduler": "^0.11.2"
   }
 }
