--- a/clientSide/package.json
+++ b/clientSide/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
+    "react-bootstrap-table-next": "^1.4.1",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
@@ -28,6 +30,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "css-loader": "^1.0.1",
     "object-assign": "^4.1.1",
     "scheduler": "^0.11.2"
   }
