--- a/serverSide/package.json
+++ b/serverSide/package.json
@@ -19,8 +19,10 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-jwt": "^5.3.1",
     "http-errors": "~1.6.2",
     "is-buffer": "^2.0.3",
+    "jsonwebtoken": "^8.4.0",
     "knex": "^0.15.2",
     "morgan": "~1.9.0",
     "node-gyp": "^3.8.0",
