--- a/clientSide/package.json
+++ b/clientSide/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "axios": "^0.18.0",
     "jwt-decode": "^2.2.0",
-    "mocha": "^5.2.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-table-next": "^1.4.1",
@@ -31,7 +30,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "chai": "^4.2.0",
     "css-loader": "^1.0.1",
+    "mocha": "^5.2.0",
     "object-assign": "^4.1.1",
     "scheduler": "^0.11.2"
   }
