--- a/serverSide/package.json
+++ b/serverSide/package.json
@@ -24,6 +24,7 @@
     "is-buffer": "^2.0.3",
     "jsonwebtoken": "^8.4.0",
     "knex": "^0.15.2",
+    "mocha": "^5.2.0",
     "morgan": "~1.9.0",
     "node-gyp": "^3.8.0",
     "nodemon": "^1.18.7",
