Fixes bugs that were deployed

--- a/clientSide/public/manifest.json
+++ b/clientSide/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Study Buddy",
-  "name": "Study Buddy powered by MasNut",
+  "short_name": "Study Buddies",
+  "name": "Study Buddies powered by MasNut",
   "icons": [
     {
       "src": "masnutlogo.png",
