--- a/serverSide/package.json
+++ b/serverSide/package.json
@@ -29,6 +29,7 @@
     "node-gyp": "^3.8.0",
     "nodemon": "^1.18.7",
     "pg": "^7.6.1",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "^2.1.1",
     "style-loader": "^0.23.1"
   },
