--- a/clientSide/public/manifest.json
+++ b/clientSide/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "short_name": "Study Buddies",
-  "name": "Study Buddies powered by MasNut",
+  "name": "Study Buddies powered by Midsummer's Night Team",
   "icons": [
     {
-      "src": "masnutlogo.png",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
